--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ defusedxml==0.6.0
 distro-info===0.18ubuntu0.18.04.1
 Django==2.2.12
 django-cors-headers==3.0.2
+django-redis==4.12.1
 docutils==0.15.2
 entrypoints==0.3
 Flask==1.1.1
@@ -119,6 +120,7 @@ PyHamcrest==1.9.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
 pymongo==3.9.0
+PyMuPDF==1.17.2
 PyMySQL==0.9.3
 PyNaCl==1.1.2
 pyOpenSSL==19.0.0
@@ -126,7 +128,7 @@ pyparsing==2.4.3
 pyRFC3339==1.0
 pyrsistent==0.15.5
 pytesseract==0.3.0
-python-apt==1.6.4
+python-apt==1.6.5+ubuntu0.2
 python-dateutil==2.8.0
 python-debian==0.1.32
 python-speech-features==0.6
@@ -134,6 +136,7 @@ pytz==2018.3
 pyxdg==0.25
 PyYAML==3.12
 pyzmq==18.1.0
+qiniu==7.2.8
 qtconsole==4.5.5
 queuelib==1.5.0
 rarfile==3.1
@@ -177,6 +180,7 @@ ufw==0.36
 unattended-upgrades==0.1
 urllib3==1.22
 usb-creator==0.3.3
+uWSGI==2.0.18
 vine==1.3.0
 virtualenv==16.7.7
 virtualenv-clone==0.5.3
